--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,15 @@
---
+/* Global Styles */
+body {
+	font-size: 18px;
+	margin-top: 50px;
+	margin-bottom: 100px;
+	overflow-y: visible;
+}
+pre {
+	font-family: "Arial Bold";
+	font-size: 11px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 23px;
+}
